--- a/public/index.html
+++ b/public/index.html
@@ -465,10 +465,9 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <p>Dibujos</p>
        <br>
        <br>
-      <img loading="lazy" src="assets/img/32_edificio/02.jpg" alt="Image 1">
-      <img loading="lazy" src="assets/img/32_edificio/03.jpg" alt="Image 1">
-       <img loading="lazy" src="assets/img/32_edificio/05.jpg" alt="Image 1">
-         <img loading="lazy" src="assets/img/32_edificio/06.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/44_casa fv_01.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/44_casa fv_00.jpg" alt="Image 1">
+       <img loading="lazy" src="assets/img/44_casa fv_02.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
     
