--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,10 @@
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
       <b><a style="left: 0px !important" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
-      <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
-      <br> <b><p>Índice</p></b>
-      <br><b>Matters of Fact <br></b><a href="#casaFG3"> El Inevitable Sufrimiento de la Arquitectura</a>
+      <p>Amenábar 2046, Piso 30 </p>
+      <p>Buenos Aires, Argentina</p>
+      <b><p>Índice</p></b>
+      <b>Matters of Fact <br></b><a href="#casaFG3"> El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><b>Casa J.B.R.C. <br></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
       <br><br><b>Casa E.R.C.P. <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
       <br><br><b>Casa F.G. </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
