--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
       <p>Buenos Aires, Argentina</p>
       <b><p>Índice</p></b>
       <b>Matters of Fact <br></b><a href="#casaFG3"> El Inevitable Sufrimiento de la Arquitectura</a>
-      <br><br><b>Casa J.B.R.C. <br></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
+      <br><b>Casa J.B.R.C. <br></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
       <br><br><b>Casa E.R.C.P. <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
       <br><br><b>Casa F.G. </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
       <br><br><b>Cute-chitecture </b><br> <a href="#cute-chitecture"> Arquitectura Póstuma</a> <br><a href="#casaFG3"> Cenotafios </a> <br><a href="#casaFG3"> Puentes </a> 
