--- a/public/index.html
+++ b/public/index.html
@@ -52,38 +52,38 @@
       <p>Amenábar 2046, Piso 30 </p>
       <p>Buenos Aires, Argentina</p>
       <b><p>Índice</p></b>
-      <b>Matters of Fact <br></b><a href="#casaFG3"> El Inevitable Sufrimiento de la Arquitectura</a>
-      <br><b>Casa J.B.R.C. <br></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
+      <b>Matters of Fact <br></b><a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>
+      <br><br><b>Casa J.B.R.C. <br></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
       <br><br><b>Casa E.R.C.P. <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
       <br><br><b>Casa F.G. </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
-      <br><br><b>Cute-chitecture </b><br> <a href="#cute-chitecture"> Arquitectura Póstuma</a> <br><a href="#casaFG3"> Cenotafios </a> <br><a href="#casaFG3"> Puentes </a> 
-      <br><br><b>Edificio S.C.W. <br></b> <a href="#cute-chitecture"> Texto </a> <br> <a href="#casaFG3"> Dibujos </a> <br> <a href="#casaFG3"> Imágenes</a> 
-      <br><br><b>Casa F.K.L. </b><br> <a href="#cute-chitecture">Texto</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a> <br><a href="#casaFG3"> Videos </a> 
-      <br><br><b>Creciendo en Público <br></b> <a href="#cute-chitecture"> Newsletter Errático</a>
-      <br><br><b>Erewhon <br></b> <a href="#cute-chitecture"> Textos</a> <br><a href="#casaFG3"> Proposiciones</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><b>Personajismo<br></b> <a href="#cute-chitecture">Del Arquitecto-Estrella al Arquitecto-Constelación</a>
-      <br><br><b>Muros, Puertas y Vanos <br></b> <a href="#casaFG3"> Hacia un Minimalismo Explosivo</a>
-      <br><br><b>MothershipTheatre </b><br> <a href="#casaFG3"> Thesis for an Opaque Architecture</a> <br><a href="#casaFG2"> Imágenes </a> <br><a href="#casaFG3"> Videos e</a>  
-      <br><br><b>Arquitectura sin Estado <br></b>  <a href="#casaFG3">  Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
-      <br><br><b>Never Even <br> </b><a href="#casaFG3"> (Respeto por las Cosas como Son)</a>
-      <br><br><b>Singular 00 <br></b><a href="#casaFG3"> Proposición</a>
-      <br><br><b>Vanguardias o Nada <br></b> <a href="#casaFG3"> Manifiestos a Priori</a><br><a href="#casaFG2"> Manifiestos Prospectivos </a>
-      <br><br><b>Ametralladora de Utopías </b><a href="#casaFG3"> <br> Texto</a><br><a href="#casaFG2"> Técnicas</a>      
-      <br><br><b>Pasar la Noche Juntos </b><a href="#casaFG3"> <br> Texto</a><br><a href="#casaFG3"> Entrevistas </a>
-      <br><br><b>Estados de la Arquitectura </b><a href="#casaFG3"> <br> Seis Alegorías</a> <a href="#casaFG3"> Imágenes</a>
-      <br><br><b>Agrupación Militancia Arquitectura </b><a href="#casaFG3"> <br> Fanzine 2013</a> 
-      <br><br><b>El Cuerpo Hueco de la Arquitectura </b><a href="#casaFG3"> <br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>
-      <br><br><b>Architecture Postponed<br><a href="#casaFG3"> </b> Texto</a><br><a href="#casaFG2"> Architecture Museum </a>
-      <br><br><b>Tu Amorosa </b><a href="#casaFG3"><br>Texto</a><br><a href="#casaFG2">Serla </a>
-      <br><br><b>Hacia una Arquitectura sin Fin </b><br> <a href="#casaFG3"> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
-      <br><br><b>Un Memorial para la Revolución<br></b><a href="#casaFG3">  No Man´s Land</a> <br><a href="#casaFG3"> Imágenes </a>
-      <br><br><b>En el Muro </b><a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><b>Parque de las Ciencias<br></b><a href="#casaFG3">Un Océano de Columnas </a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><b>Laberinto </b><a href="#casaFG3"> <br>Texto</a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><b>Geometrías Invisibles </b><a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Imágenes</a> 
-      <br><br><b>Hoy el Mundo </b><br> <a href="#casaFG3"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
-      <br><br> <b>Estudio </b> <a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Oficina </a>
-      <br><br><b>Sitio Web</b><a href="#casaFG3"><br>Tapiz</a>
+      <br><br><b>Cute-chitecture </b><br> <a href="#cute"> Arquitectura Póstuma</a> <br><a href="#cute2"> Cenotafios </a> <br><a href="#cute3"> Puentes </a> 
+      <br><br><b>Edificio S.C.W. <br></b> <a href="#edificioSCW"> Texto </a> <br> <a href="#edificioSCW2"> Dibujos </a> <br> <a href="#edificioSCW3"> Imágenes</a> 
+      <br><br><b>Casa F.K.L. </b><br> <a href="#casaFKL">Texto</a> <br><a href="#casaFKL2"> Dibujos </a> <br><a href="#casaFKL3"> Fotografías</a> <br><a href="#casaFKL4"> Videos </a> 
+      <br><br><b>Creciendo en Público <br></b> <a href="#creciendo"> Newsletter Errático</a>
+      <br><br><b>Erewhon <br></b> <a href="#erewhon"> Textos</a> <br><a href="#erewhon2"> Proposiciones</a> <br><a href="#erewhon3"> Dibujos </a> <br><a href="#erewhon4"> Imágenes</a>
+      <br><br><b>Personajismo<br></b> <a href="#personajismo">Del Arquitecto-Estrella al Arquitecto-Constelación</a>
+      <br><br><b>Muros, Puertas y Vanos <br></b> <a href="#MPV"> Hacia un Minimalismo Explosivo</a>
+      <br><br><b>MothershipTheatre </b><br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos e</a>  
+      <br><br><b>Arquitectura sin Estado <br></b>  <a href="#sinEstado">  Albergues para Multitudes</a> <br><a href="#sinEstado2"> Multitudes en Movimiento </a> <br><a href="#sinEstado3"> Modelos </a> <br><a href="#sinEstado4"> Dibujos </a> 
+      <br><br><b>Never Even <br> </b><a href="#never"> (Respeto por las Cosas como Son)</a>
+      <br><br><b>Singular 00 <br></b><a href="#singular"> Proposición</a>
+      <br><br><b>Vanguardias o Nada <br></b> <a href="#vanguardia"> Manifiestos a Priori</a><br><a href="#vanguardia2"> Manifiestos Prospectivos </a>
+      <br><br><b>Ametralladora de Utopías </b><a href="#ametralladora"> <br> Texto</a><br><a href="#ametralladora2"> Técnicas</a>      
+      <br><br><b>Pasar la Noche Juntos </b><a href="#noche"> <br> Texto</a><br><a href="#noche2"> Entrevistas </a>
+      <br><br><b>Estados de la Arquitectura </b><a href="#estados"> <br> Seis Alegorías</a> <a href="#estados2"> Imágenes</a>
+      <br><br><b>Agrupación Militancia Arquitectura </b><a href="#militancia"> <br> Fanzine 2013</a> 
+      <br><br><b>El Cuerpo Hueco de la Arquitectura </b><a href="#cuerpo"> <br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>
+      <br><br><b>Architecture Postponed<br><a href="#postponed"> </b> Texto</a><br><a href="#postponed2"> Architecture Museum </a>
+      <br><br><b>Tu Amorosa </b><a href="#amorosa"><br>Texto</a><br><a href="#amorosa2">Serla </a>
+      <br><br><b>Hacia una Arquitectura sin Fin </b><br> <a href="#sinFin"> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
+      <br><br><b>Un Memorial para la Revolución<br></b><a href="#revolucion">  No Man´s Land</a> <br><a href="#revolucion2"> Imágenes </a>
+      <br><br><b>En el Muro </b><a href="#muro"><br>Texto</a> <br><a href="#muro2"> Dibujos </a> <br><a href="#muro3"> Imágenes</a>
+      <br><br><b>Parque de las Ciencias<br></b><a href="#ciencias">Un Océano de Columnas </a> <br><a href="#ciencias2"> Dibujos</a> <br><a href="#ciencias3"> Imágenes</a>
+      <br><br><b>Laberinto </b><a href="#laberinto"> <br>Texto</a> <br><a href="#laberinto2"> Dibujos</a> <br><a href="#laberinto3"> Imágenes</a>
+      <br><br><b>Geometrías Invisibles </b><a href="#invisibles"><br>Texto</a> <br><a href="#invisibles2"> Imágenes</a> 
+      <br><br><b>Hoy el Mundo </b><br> <a href="#mundo"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
+      <br><br> <b>Estudio </b> <a href="#estudio"><br>Texto</a> <br><a href="#estudio2"> Oficina </a>
+      <br><br><b>Sitio Web</b><a href="#web"><br>Tapiz</a>
     </div>
 
     <div class="column" style="width: 5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -320,7 +320,7 @@ Ritmo: Catalina Sfer Salas</p>
       <p style="color:white;">.</p>
     </div>
        <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <span class="anchor" id="casaFG"></span>
+      <span class="anchor" id="cute-chitecture"></span>
       <h3>Cute-chitecture</h3>
       <p>Arquitectura Póstuma</p>
       <br>
@@ -332,7 +332,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="cenotafios">
-      <span class="anchor" id="cute-chitecture"></span>
+      <span class="anchor" id="cute-chitecture2"></span>
       <h3 style="color:white;">.</h3>
       <p>Cenotafios</p>
       <br>
@@ -365,7 +365,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <!-- Add more content here if needed -->
   </div>
        <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="cenotafios">
-      <span class="anchor" id="cute-chitecture"></span>
+      <span class="anchor" id="cute-chitecture3"></span>
       <h3 style="color:white;">.</h3>
       <p>Puentes</p>
       <br>
