--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,8 @@
       <b><p>Índice</p></b>
       <b>Matters of Fact <br></b><a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><b>Casa J.B.R.C. <br></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
-      <br><br><b>Casa E.R.C.P. <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
-      <br><br><b>Casa F.G. </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
+      <br><br><b>Casa E.R.C.P. <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
+      <br><br><b>Casa F.G. </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>
       <br><br><b>Cute-chitecture </b><br> <a href="#cute"> Arquitectura Póstuma</a> <br><a href="#cute2"> Cenotafios </a> <br><a href="#cute3"> Puentes </a> 
       <br><br><b>Edificio S.C.W. <br></b> <a href="#edificioSCW"> Texto </a> <br> <a href="#edificioSCW2"> Dibujos </a> <br> <a href="#edificioSCW3"> Imágenes</a> 
       <br><br><b>Casa F.V. <br></b> <a href="#casaFV"> Texto </a> <br> <a href="#casaFV2"> Dibujos </a>
@@ -64,7 +64,7 @@
       <br><br><b>Erewhon <br></b> <a href="#erewhon"> Textos</a> <br><a href="#erewhon2"> Proposiciones</a> <br><a href="#erewhon3"> Dibujos </a> <br><a href="#erewhon4"> Imágenes</a>
       <br><br><b>Personajismo<br></b> <a href="#personajismo">Del Arquitecto-Estrella al Arquitecto-Constelación</a>
       <br><br><b>Muros, Puertas y Vanos <br></b> <a href="#MPV"> Hacia un Minimalismo Explosivo</a>
-      <br><br><b>MothershipTheatre </b><br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos e</a>  
+      <br><br><b>MothershipTheatre </b><br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos </a>  
       <br><br><b>Arquitectura sin Estado <br></b>  <a href="#sinEstado">  Albergues para Multitudes</a> <br><a href="#sinEstado2"> Multitudes en Movimiento </a> <br><a href="#sinEstado3"> Modelos </a> <br><a href="#sinEstado4"> Dibujos </a> 
       <br><br><b>Singular 00 <br></b><a href="#singular"> Proposición</a>
       <br><br><b>Vanguardias o Nada <br></b> <a href="#vanguardia"> Manifiestos a Priori</a><br><a href="#vanguardia2"> Manifiestos Prospectivos </a>
@@ -73,7 +73,7 @@
       <br><br><b>Estados de la Arquitectura </b><a href="#estados"> <br> Seis Alegorías</a> <a href="#estados2"> Imágenes</a>
       <br><br><b>Agrupación Militancia Arquitectura </b><a href="#militancia"> <br> Fanzine 2013</a> 
       <br><br><b>El Cuerpo Hueco de la Arquitectura </b><a href="#cuerpo"> <br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>
-      <br><br><b>Architecture Postponed<br><a href="#postponed"> </b> Texto</a><br><a href="#postponed2"> Architecture Museum </a>
+      <br><br><b>Architecture Postponed </b><a href="#postponed"> <br> Texto</a><br><a href="#postponed2"> Architecture Museum </a>
       <br><br><b>Tu Amorosa </b><a href="#amorosa"><br>Texto</a><br><a href="#amorosa2">Serla </a>
       <br><br><b>Never Even <br> </b><a href="#never"> (Respeto por las Cosas como Son)</a>
       <br><br><b>Hacia una Arquitectura sin Fin </b><br> <a href="#sinFin"> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
@@ -424,8 +424,8 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
        <br>
       <img loading="lazy" src="assets/img/32_edificio/02.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/32_edificio/03.jpg" alt="Image 1">
-       <img loading="lazy" src="assets/img/32_edificio/05.jpg" alt="Image 1">
-         <img loading="lazy" src="assets/img/32_edificio/06.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/32_edificio/05.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/32_edificio/06.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
  <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -469,7 +469,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
        <br>
       <img loading="lazy" src="assets/img/44_casa fv/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/44_casa fv/00.jpg" alt="Image 1">
-       <img loading="lazy" src="assets/img/44_casa fv/02.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/44_casa fv/02.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
     
