--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,8 @@
 </head>
 <body>
   <button id="slideBack" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
-  <button id="slideBack" type="button" class="arrow-button-l" href="#matters"></button>
+  <br>
+  <button id="slideBack" type="button" class="arrow-button-l" onclick="location.href='#matters'"></button>
 
   <div class="container">
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
