--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,8 @@
 
 </head>
 <body>
-  <button id="slideBack" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
-  <br>
-  <button id="slideBack" type="button" class="arrow-button-l" onclick="location.href='#matters'"></button>
+  <button id="slideBack" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()" style="vertical-align:top"></button>
+  <button id="slideBack" type="button" class="arrow-button-l" onclick="location.href='#'" style="vertical-align:bottom"></button>
 
   <div class="container">
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -86,7 +85,7 @@
       <br><br><b>Laberinto </b><a href="#laberinto"> <br>Texto</a> <br><a href="#laberinto2"> Dibujos</a> <br><a href="#laberinto3"> Imágenes</a>
       <br><br><b>Geometrías Invisibles </b><a href="#invisibles"><br>Texto</a> <br><a href="#invisibles2"> Imágenes</a> 
       <br><br><b>Hoy el Mundo </b><br> <a href="#mundo"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
-      <br><br> <b>Estudio </b> <a href="#estudio"><br>Texto</a> <br><a href="#estudio2"> Oficina </a>
+      <br><br><b>Estudio </b> <a href="#estudio"><br>Texto</a> <br><a href="#estudio2"> Oficina </a>
       <br><br><b>Sitio Web</b><a href="#web"><br>Tapiz</a>
     </div>
 
