--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,12 @@
 
 </head>
 <body>
-  <button id="slideBack" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()" style="vertical-align:top"></button>
-  <button id="slideBack" type="button" class="arrow-button-l" onclick="location.href='#'" style="vertical-align:bottom"></button>
+  <div>
+  <button id="slideBack" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
+  </div>
+  <div>
+  <button id="slideBack" type="button" class="arrow-button-l" onclick="location.href='#left'"></button>
+  </div>
 
   <div class="container">
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
