--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,12 @@
 
 </head>
 <body>
-  <div>
-  <button id="slideBack" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
-  </div>
-  <div>
-  <button id="slideBack" type="button" class="arrow-button-l" onclick="location.href='#left'"></button>
-  </div>
-
+  
+<div class="button-container">
+  <button id="slideBackTop" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
+  <button id="slideBackBottom" type="button" class="arrow-button-l" onclick="location.href='#left'"></button>
+</div>
+  
   <div class="container">
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
