--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 <div class="button-container">
   <button id="slideBackTop" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
 </div>
-<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="location.href='#left'"></button>
+<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="location.href='#left'">&#x21D1;&#x21D3;</button>
 
   
   <div class="container">
