--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
 <body>
   
 <div class="button-container">
-  <button id="slideBackTop" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
+  <button id="slideBackTop" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()">\02C2</button>
 </div>
-<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="location.href='#left'">&#x21D1;&#x21D3;</button>
+<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="location.href='#left'">U+226A</button>
 
   
   <div class="container">
