--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
 <body>
   
 <div class="button-container">
-  <button id="slideBackTop" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()" style="content: '\02C2'"></button>
+  <button id="slideBackTop" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
 </div>
-<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="location.href='#left'" style="content: 'U+226A'"></button>
+<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="location.href='#left'"></button>
 
   
   <div class="container">
