--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 <div class="button-container">
   <button id="slideBackTop" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
 </div>
-<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="location.href='#left'"></button>
+<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="window.location.href = '/';">&#x226A;</button>
 
   
   <div class="container">
@@ -1880,7 +1880,11 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
 
   </div>
   
+  <div class="button-container">
   <button id="slideForward" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>
+</div>
+<button id="slideForwardBottom" type="button" class="arrow-button-r" onclick="window.location.href = '/';"></button>
+  
 </body>
 
 <script>
