--- a/public/index.html
+++ b/public/index.html
@@ -1881,9 +1881,9 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
   </div>
   
   <div class="button-container">
-  <button id="slideForward" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>
+  <button id="slideForwardTop" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>
 </div>
-<button id="slideForwardBottom" type="button" class="arrow-button-r" onclick="window.location.href = '/';"></button>
+<button id="slideForwardBottom" type="button" class="arrow-button-r" onclick="window.location.href = '/right-end';">&#x226B;&#xFE0E;</button>
   
 </body>
 
