--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   
-<div class="button-container">
+<div class="button-container-l">
   <button id="slideBackTop" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
 </div>
 <button id="slideBackBottom" type="button" class="arrow-button-l" onclick="window.location.href = '/';">&#x226A;</button>
@@ -1880,7 +1880,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
 
   </div>
   
-  <div class="button-container">
+  <div class="button-container-r">
   <button id="slideForwardTop" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>
 </div>
 <button id="slideForwardBottom" type="button" class="arrow-button-r" onclick="window.location.href = '/right-end';">&#x226B;&#xFE0E;</button>
