--- a/public/index.html
+++ b/public/index.html
@@ -1883,7 +1883,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
   <div class="button-container-r">
   <button id="slideForwardTop" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>
 </div>
-<button id="slideForwardBottom" type="button" class="arrow-button-r" onclick="window.location.href = '/right-end';">&#x226B;&#xFE0E;</button>
+<button id="slideForwardBottom" type="button" class="arrow-button-r" onclick="window.location.href = '#web';">&#x226B;&#xFE0E;</button>
   
 </body>
 
