--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 <div class="button-container-l">
   <button id="slideBackTop" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
 </div>
-<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="window.location.href = '/';">&#x2B05;&#xFE0E;</button>
+<button id="slideBackBottom" type="button" class="arrow-button-l" onclick="window.location.href = '/';">&#x226A;&#xFE0E;</button>
 
   
   <div class="container">
