--- a/public/index.html
+++ b/public/index.html
@@ -41,15 +41,12 @@
     scrollSpeed = 0;
   }
 
-// Smooth scrolling function
+// Smooth horizontal scrolling function
 function scrollToElement(targetElement) {
-  window.scrollTo({
-    top: targetElement.offsetTop,
-    behavior: 'smooth' // Smooth scrolling behavior
-  });
+  targetElement.scrollIntoView({ behavior: 'smooth', block: 'nearest', inline: 'start' });
 }
 
-// Add smooth scrolling behavior to all links with href pointing to an ID
+// Add smooth horizontal scrolling behavior to all links with href pointing to an ID
 document.querySelectorAll('a[href^="#"]').forEach(anchor => {
   anchor.addEventListener('click', function(e) {
     e.preventDefault(); // Prevent default behavior of anchor tag
@@ -59,6 +56,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     }
   });
 });
+
 </script>
 
 </head>
