--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  
 <title>Manuel Mensa</title>
 <link rel="icon" type="image/x-icon" href="assets/img/00_logo/manuelmensa-logo.jpeg">
   
@@ -51,6 +54,11 @@
 </div>
 <button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
 
+    <div class="column" style="width: 2.5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor"></span>
+      <h3 style="color:white;">.</h3>
+      <p style="color:white;">.</p>
+    </div>
   
   <div class="container">
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
