--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+<meta name="viewport" content="width=device-width, initial-scale=1>
   
 <title>Manuel Mensa</title>
 <link rel="icon" type="image/x-icon" href="assets/img/00_logo/manuelmensa-logo.jpeg">
@@ -53,14 +53,15 @@
   <button id="slideBackTop" type="button" class="arrow-button-l" onclick="window.location.href = '/';">&#x226A;&#xFE0E;</button>
 </div>
 <button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
+  
+  <div class="container">
 
     <div class="column" style="width: 2.5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor"></span>
       <h3 style="color:white;">.</h3>
       <p style="color:white;">.</p>
     </div>
-  
-  <div class="container">
+
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
       <b><a style="left: 0px !important" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
