--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
   
   <div class="container">
 
-    <div class="column" style="width: 2.5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="gapB" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor"></span>
       <h3 style="color:white;">.</h3>
       <p style="color:white;">.</p>
@@ -103,7 +103,7 @@
       <br><br><b>Sitio Web</b><a href="#web"><br>Tapiz</a>
     </div>
 
-    <div class="column" style="width: 5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="gap2B" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor"></span>
       <h3 style="color:white;">.</h3>
       <p style="color:white;">.</p>
