--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@ Maecenas nec lobortis nunc.
 </p>
       <!-- Add more content here if needed -->
     </div>
-    <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
@@ -180,7 +180,7 @@ Maecenas nec lobortis nunc.
       <img loading="lazy" src="assets/img/45_edificio/01.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
-    <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC2"></span>
       <h3 style="color:white;">.</h3>
       <p>Imágenes</p>
@@ -215,7 +215,7 @@ Maecenas nec lobortis nunc.
 </p>
       <!-- Add more content here if needed -->
     </div>
-    <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
@@ -300,7 +300,7 @@ Ritmo: Catalina Sfer Salas</p>
       <br>
       <p>Equipo: Manuel Mensa, Lucas Torres Aguero</p><!-- Add more content here if needed -->
     </div>
-    <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaERCP2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
@@ -351,7 +351,7 @@ Ritmo: Catalina Sfer Salas</p>
       <br>
       <p>Equipo: Manuel Mensa, Lucas Torres Agüero, Matías Etchart </p>
     </div>
-    <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFG2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
@@ -477,7 +477,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <br>
       <p>Equipo: Manuel Mensa, Nicolás Boscoboinik</p><!-- Add more content here if needed -->
     </div>
-     <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+     <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="edificioSCW2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
@@ -522,7 +522,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <br>
       <p>Equipo: Manuel Mensa, Nicolás Boscoboinik</p><!-- Add more content here if needed -->
     </div>
-     <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+     <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFV2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
@@ -553,7 +553,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <br>
       <p>Equipo: Manuel Mensa, Nicolás Boscoboinik, Catalina Sfer Salas </p><!-- Add more content here if needed -->
     </div>
-<div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+<div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFKL2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
@@ -955,7 +955,7 @@ In Miesian clearspan floor and ceiling are two hovering, apparently uninterrupte
       <p style="color:white;">.</p>
     </div>
     
-    <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Never Even</h3>
        <p>(Respeto por las Cosas como Son)</p>
       <br>
