--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@ Maecenas nec lobortis nunc.
       <img loading="lazy" src="assets/img/45_edificio/01.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
-    <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC2"></span>
       <h3 style="color:white;">.</h3>
       <p>Imágenes</p>
