--- a/public/index.html
+++ b/public/index.html
@@ -64,9 +64,9 @@
 
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
-      <b><a style="left: 0px !important" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
-      <p style="line-height: 0.5 !important;">Amenábar 2046, Piso 30 </p>
-      <p style="line-height: 0.5 !important;">Buenos Aires, Argentina</p>
+      <b><a style="left: 0px !important; line-height: 0.25 !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+      <p style="line-height: 0.25 !important;">Amenábar 2046, Piso 30 </p>
+      <p>Buenos Aires, Argentina</p>
       <br>
       <b><p>Índice</p></b>
       <b>Matters of Fact <br></b><a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>
