--- a/public/index.html
+++ b/public/index.html
@@ -64,10 +64,9 @@
 
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
-      <b><a style="left: 0px !important; line-height: 0.25 !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
-      <p style="line-height: 0.25 !important;">Amenábar 2046, Piso 30 </p>
+      <b><a style="left: 0px !important; line-height: 50% !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+      <p style="line-height: 50% !important;">Amenábar 2046, Piso 30 </p>
       <p>Buenos Aires, Argentina</p>
-      <br>
       <b><p>Índice</p></b>
       <b>Matters of Fact <br></b><a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><b>Casa J.B.R.C. <br></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
