--- a/public/index.html
+++ b/public/index.html
@@ -64,9 +64,9 @@
 
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
-      <p style="margin-bottom: -15px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
-      <p style="margin-bottom: -15px">Amenábar 2046, Piso 30 </p>
-      <p style="margin-bottom: 25px">Buenos Aires, Argentina</p>
+      <p style="margin-bottom: -20px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+      <p style="margin-bottom: -20px">Amenábar 2046, Piso 30 </p>
+      <p style="margin-bottom: 20px">Buenos Aires, Argentina</p>
       <b><p>Índice</p></b>
       <b>Matters of Fact <br></b><a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><b>Casa J.B.R.C. <br></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
@@ -113,7 +113,8 @@
       <span class="anchor" id="matters"></span>
       <h3>Matters of Fact</h3>
       <p>El Inevitable Sufrimiento de la Arquitectura</p>
-      <p>
+      <br>
+      <p style="margin-top: -20px">
         <i>[…] Todo arte, toda filosofía pueden ser considerados como medios al mismo tiempo saludables y auxiliares al servicio de la vida en crecimiento, en lucha; presuponen siempre sufrimientos, seres que sufren. Pero hay dos clases de seres que sufren: los que sufren por su abundancia de vida, que desean un arte dionisíaco y que tienen asimismo una visión y una comprensión trágicas de la vida; y aquellos que sufren por su empobrecimiento de vida, que buscan en el arte y en el conocimiento el descanso, el silencio, el mar en calma, la entrega personal o, por el contrario, la borrachera, la crispación, el estupor, el delirio. […] El ser más rico en abundancia vital, el dios y el hombre dionisíacos pueden permitirse no solo ver lo terrible y problemático, sino también cometer incluso una acción terrible y entregarse a todo lujo de destrucciones, descomposiciones y negaciones; para ellos, el mal, el absurdo y la fealdad horrible están, por así decirlo, permitidos, en virtud de un excedente de fuerzas generadoras y fecundas, capaces de convertir cualquier desierto en un país fértil. </i> <br>
 Friedrich Nietzsche, <i>La Gaya Ciencia </i> <br>
 
