--- a/public/index.html
+++ b/public/index.html
@@ -1822,7 +1822,7 @@ Las geometrías invisibles son conceptos que gobiernan todos los espacios que ha
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="mundo"></span>
       <h3>Hoy el Mundo</h3>
-      <p>Circular #02. Arquitectura, Arquitectura, Arquitectura
+      <p>Circular #02. Arquitectura, Arquitectura, Arquitectura</p>
   <br><b>A:</b><br> Hoy el mundo es economía. La arquitectura debe utilizar sus herramientas disciplinares para facilitar la administración eficiente de los recursos utilizados en la construcción de edificios. <br>
 <br><b>B:</b><br> Hoy el mundo carece de una ética. La arquitectura debe recuperar los proyectos del movimiento moderno de ayer y utilizar las herramientas tecnológicas de hoy para inventar un mundo. <br>
 <br><b>C:</b> <br>Hoy el mundo es un lugar horrible y peligroso. La arquitectura resiste al producir belleza y seguridad para sus usuarios. <br>
