--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   
 <link href="/assets/css/global.css" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-xN0KuAOt6fW2vzDmyB8oj/cF0TpGuvFcs3LjzoilI+ErXCHLcS7k5Z68mkJgCUBHjWMeEjPZ6bip5TdHFL0D0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+<script src="https://kit.fontawesome.com/0ffcf80e36.js" crossorigin="anonymous"></script>
+  
 <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
 
 <script>
