--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 <body>
   
 <div class="button-container-l">
-  <button id="slideBackTop" type="button" class="arrow-button-l" onclick="window.location.href = '#gapB';">&#x226A;&#xFE0E;</button>
+  <button id="slideBackTop" type="button" class="arrow-button-l" onclick="window.location.href = '#gapB';"></button> <!--&#x226A;&#xFE0E;-->
 </div>
 <button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
   
@@ -1972,7 +1972,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
   </div>
   
   <div class="button-container-r">
-  <button id="slideForwardTop" type="button" class="arrow-button-r" onclick="window.location.href = '#web';">&#x226B;&#xFE0E;</button>
+  <button id="slideForwardTop" type="button" class="arrow-button-r" onclick="window.location.href = '#web';"></button> <!--&#x226B;&#xFE0E;-->
 </div>
 <button id="slideForwardBottom" type="button" class="arrow-button-r" onmousedown="startScrollRight()" onmouseup="stopScrollRight()" onmouseleave="stopScrollRight()"></button>
   
