--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       <p style="color:white;">.</p>
     </div>
 
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" id="indice" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
       <p style="margin-bottom: -20px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <p style="margin-bottom: -20px">Amenábar 2046, Piso 30 </p>
