--- a/public/index.html
+++ b/public/index.html
@@ -63,12 +63,12 @@
     </div>
 
     <div class="column" id="indice" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>Manuel Mensa</h3>
-      <p style="margin-bottom: -20px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
-      <p style="margin-bottom: -20px">Amenábar 2046, Piso 30 </p>
-      <p style="margin-bottom: 20px">Buenos Aires, Argentina</p>
-      <b><p>Índice</p></b>
-      <b>Matters of Fact </b><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
+      <h3 style="margin-bottom: -10px">Manuel Mensa</h3>
+      <p style="margin-bottom: -10px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+      <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
+      <p style="margin-bottom: 10px">Buenos Aires, Argentina</p>
+      <h3>Índice</h3>
+      <a href="#matters">Matters of Fact </a><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
       <br><br><b>Casa E.R.C.P. </b><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
       <br><br><b>Casa J.B.R.C. </b><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
       <br><br><b>Casa F.G. </b><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
@@ -79,7 +79,7 @@
       <br><br><b>Creciendo en Público </b> <!--<br> <a href="#creciendo"> Newsletter Errático</a>-->
       <br><br><b>Erewhon </b> <!--<br> <a href="#erewhon"> Textos</a> <br><a href="#erewhon2"> Proposiciones</a> <br><a href="#erewhon3"> Dibujos </a> <br><a href="#erewhon4"> Imágenes</a>-->
       <br><br><b>Personajismo</b> <!--<br> <a href="#personajismo">Del Arquitecto-Estrella al Arquitecto-Constelación</a>-->
-      <br><br><b>Muros, Puertas y Vanos </b><br> <!-- <a href="#MPV"> Hacia un Minimalismo Explosivo</a>-->
+      <br><br><b>Muros, Puertas y Vanos </b><!--<br>  <a href="#MPV"> Hacia un Minimalismo Explosivo</a>-->
       <br><br><b>MothershipTheatre </b> <!--<br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos </a>  -->
       <br><br><b>Arquitectura sin Estado </b> <!--<br>  <a href="#sinEstado">  Albergues para Multitudes</a> <br><a href="#sinEstado2"> Multitudes en Movimiento </a> <br><a href="#sinEstado3"> Modelos </a> <br><a href="#sinEstado4"> Dibujos </a> -->
       <br><br><b>Singular 00 </b><!--<br> <a href="#singular"> Proposición</a>-->
