--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,10 @@
       <p style="margin-bottom: -10px"><a style="left: 0px !important;" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <p style="margin-bottom: -10px">Amenábar 2046, Piso 30 </p>
       <p style="margin-bottom: 10px">Buenos Aires, Argentina</p>
+      <br>
       <h3>Índice</h3>
       <a href="#matters">Matters of Fact </a><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
-      <br><br><b>Casa E.R.C.P. </b><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
+      <br><a href="#casaERCP">Casa E.R.C.P. </a><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
       <br><br><b>Casa J.B.R.C. </b><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
       <br><br><b>Casa F.G. </b><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
       <br><br><b>Cute-chitecture </b> <!-- <br><a href="#cute"> Arquitectura Póstuma</a> <br><a href="#cute2"> Cenotafios </a> <br><a href="#cute3"> Puentes </a> -->
