--- a/public/index.html
+++ b/public/index.html
@@ -70,11 +70,11 @@
       <br>
       <h3>Índice</h3>
       <a href="#matters">Matters of Fact </a><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
-      <br><a href="#casaERCP">Casa E.R.C.P. </a><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
+      <br><br><a href="#casaERCP">Casa E.R.C.P.</a><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
       <br><br><b>Casa J.B.R.C. </b><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
       <br><br><b>Casa F.G. </b><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
       <br><br><b>Cute-chitecture </b> <!-- <br><a href="#cute"> Arquitectura Póstuma</a> <br><a href="#cute2"> Cenotafios </a> <br><a href="#cute3"> Puentes </a> -->
-      <br><br><b>Edificio S.C.W. </b> <!--<br> <a href="#edificioSCW"> Texto </a> <br> <a href="#edificioSCW2"> Dibujos </a> <br> <a href="#edificioSCW3"> Imágenes</a> -->
+      <br><br><a href="#edificioSCW">Edificio S.C.W. </a> <!--<br> <a href="#edificioSCW"> Texto </a> <br> <a href="#edificioSCW2"> Dibujos </a> <br> <a href="#edificioSCW3"> Imágenes</a> -->
       <br><br><b>Casa F.V. </b> <!--<br> <a href="#casaFV"> Texto </a> <br> <a href="#casaFV2"> Dibujos </a>-->
       <br><br><b>Casa F.K.L. </b> <!--<br> <a href="#casaFKL">Texto</a> <br><a href="#casaFKL2"> Dibujos </a> <br><a href="#casaFKL3"> Fotografías</a> <br><a href="#casaFKL4"> Videos </a> -->
       <br><br><b>Creciendo en Público </b> <!--<br> <a href="#creciendo"> Newsletter Errático</a>-->
