--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       <p style="margin-bottom: 10px">Buenos Aires, Argentina</p>
       <br>
       <h3>Índice</h3>
-      <a href="#matters">Matters of Fact </a><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
+      <br><a href="#matters">Matters of Fact </a><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
       <br><br><a href="#casaERCP">Casa E.R.C.P.</a><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
       <br><br><b>Casa J.B.R.C. </b><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
       <br><br><b>Casa F.G. </b><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
@@ -113,9 +113,9 @@
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="matters"></span>
       <h3>Matters of Fact</h3>
-      <p>El Inevitable Sufrimiento de la Arquitectura</p>
+      <!--<p>El Inevitable Sufrimiento de la Arquitectura</p>-->
       <br>
-      <p style="margin-top: -5px">
+      <p>
         <i>[…] Todo arte, toda filosofía pueden ser considerados como medios al mismo tiempo saludables y auxiliares al servicio de la vida en crecimiento, en lucha; presuponen siempre sufrimientos, seres que sufren. Pero hay dos clases de seres que sufren: los que sufren por su abundancia de vida, que desean un arte dionisíaco y que tienen asimismo una visión y una comprensión trágicas de la vida; y aquellos que sufren por su empobrecimiento de vida, que buscan en el arte y en el conocimiento el descanso, el silencio, el mar en calma, la entrega personal o, por el contrario, la borrachera, la crispación, el estupor, el delirio. […] El ser más rico en abundancia vital, el dios y el hombre dionisíacos pueden permitirse no solo ver lo terrible y problemático, sino también cometer incluso una acción terrible y entregarse a todo lujo de destrucciones, descomposiciones y negaciones; para ellos, el mal, el absurdo y la fealdad horrible están, por así decirlo, permitidos, en virtud de un excedente de fuerzas generadoras y fecundas, capaces de convertir cualquier desierto en un país fértil. </i> <br>
 Friedrich Nietzsche, <i>La Gaya Ciencia </i> <br>
 
