--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
     <div class="column" id="ensanche" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaERCP2"></span>
       <h3 style="color:white;">.</h3>
-      <p>Dibujos</p>
+      <!--<p>Dibujos</p>-->
       <br>
       <br>
       <img loading="lazy" src="assets/img/02_avalos 2172_planos de arquitectura/01.jpg" alt="Image 1">
