--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,6 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <h3 style="color:white;">.</h3>
       <!--<p>Dibujos</p>-->
       <br>
-      <br>
       <img loading="lazy" src="assets/img/02_avalos 2172_planos de arquitectura/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/02_avalos 2172_planos de arquitectura/02.jpg" alt="Image 1">
       <br>
@@ -181,7 +180,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaERCP3"></span>
       <h3 style="color:white;">.</h3>
-      <p>Fotografías x F.S.</p>
+      <!--<p>Fotografías x F.S.</p>-->
       <br>
       <br>
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
