--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 <body>
   
 <div class="button-container-l">
-  <button id="slideBackTop" type="button" class="arrow-button-l" onclick="window.location.href = '#gapB';"></button> <!--&#x226A;&#xFE0E;-->
+  <button id="slideBackTop" type="button" class="arrow-button-l" href='#gapB'></button> <!--&#x226A;&#xFE0E;-->
 </div>
 <button id="slideBackBottom" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
   
